--- a/Algorhythm/Algorhythm/Base.lproj/Main.storyboard
+++ b/Algorhythm/Algorhythm/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="s3i-pz-Cgv">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
-        <!--Playlist Master View Controller-->
+        <!--Playlists-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PlaylistMasterViewController" sceneMemberID="viewController">
@@ -23,7 +23,7 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="aOy-Db-rE6" kind="modal" id="Qjs-em-tgp"/>
+                                    <segue destination="aOy-Db-rE6" kind="push" id="Qjs-em-tgp"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -34,15 +34,16 @@
                             <constraint firstItem="ktp-Pb-r7B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iZ8-WR-hzQ"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Playlists" id="QY0-bj-ryq"/>
                     <connections>
                         <outlet property="aButton" destination="ktp-Pb-r7B" id="m0j-k6-NoP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130.66666666666666" y="319.5"/>
+            <point key="canvasLocation" x="662" y="319"/>
         </scene>
-        <!--Playlist Details View Controller-->
+        <!--Artists-->
         <scene sceneID="JF5-2d-UsF">
             <objects>
                 <viewController id="aOy-Db-rE6" customClass="PlaylistDetailsViewController" sceneMemberID="viewController">
@@ -56,11 +57,30 @@
                         <animations/>
                         <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="szP-4f-qdb"/>
+                    <navigationItem key="navigationItem" title="Artists" id="szP-4f-qdb"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4nS-6T-HkE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="582" y="259"/>
+            <point key="canvasLocation" x="1114" y="259"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="MQd-hv-tFP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="s3i-pz-Cgv" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="B4o-2d-ukl">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="CkD-Sr-J6N"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GXX-9H-UUs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="202" y="270"/>
         </scene>
     </scenes>
 </document>
